deploy/onboarding-perfapp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: perfapp
  namespace: onboarding-perfapp
  labels:
    app: onboarding-perfapp
spec:
  to:
    kind: Service
    name: perfapp
    weight: 100
  port:
    targetPort: proxy
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
